src/app/client/about/about.component.scss
.home-section {
  padding: 80px 0;
  position: relative;
  height: 65vh;
}

.container-fluid {
  background-size: cover;
  width: 100%;
  height: 500px;
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2)), url(/assets/images/about-img.jpeg);
  background-position: top;
  position: relative;
  padding-bottom: 20px;
}

.image-text {
  position: absolute;
  font-size: 48px;
  background-color: transparent;
  font-family: 'Nunito', sans-serif;
  top: 50%;
  right: 10%;
  color: #ffffff;
}

.about-image {
  width: 80%;
}

.flex-container {
  display: flex;
  max-width: 1000px;
  margin: 0 auto;
}

.flex-container1 {
  height: 100px;
  flex-basis: 70%;
}

.flex-container2 {
  height: 100px;
  flex-basis: 30%;
}

h1, h2, h3, p, li {
  font-family: 'Nunito', sans-serif;
  color: #000000;
}

.light-gray {
  background: rgba(0, 0, 0, 0.024);
}

.nb-card-color {
  background: #fff !important;
  padding: 10px;
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
  border-top: 2px solid #000;
}

nb-card:hover {
  box-shadow: 0 10px 16px rgba(0, 0, 0, 0.2);
  border-top: 2px solid #3f51b5;

}

.nb-card-header {
  color: #000;
}

.description {
  color: #616161;
  line-height: 1.5rem;
}

//#2f296b
//re-writing global css
/deep/ nb-layout .layout {
  background-color: #fff !important;
}

nb-layout-column {
  padding: 0 !important;
}

.about-description {
  color: #000000;
  font-size: 1.2rem;
  line-height: 1.7rem;
  word-spacing: 2px;
}

.short-logo {
  position: relative;
}

.short-logo img {
  position: absolute;
  bottom: 0;
  left: 0;
}

.long-logo {
  text-align: right;
}


@media (min-width: 481px) and (max-width: 767px) {
  .home-section {
    height: auto;
  }
  .flex-container {
    flex-direction: column-reverse;
  }
  .section-heading {
    text-align: center;
    margin-top: 20px;
  }
  .about-description {
    margin-left: 10px;
    margin-right: 10px;
  }
}

/*
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/

@media (min-width: 320px) and (max-width: 480px) {
  .home-section {
    height: auto;
  }
  .flex-container {
    flex-direction: column-reverse;
  }
  .section-heading {
    text-align: center;
    margin-top: 20px;
  }
  .about-description {
    margin-left: 10px;
    margin-right: 10px;
  }

}

// Media query for ipad
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) { /* STYLES GO HERE */
  .home-section {
    height: auto;
    padding: 20px 0;
  }
  .about-description {
    margin-left: 10px;
    margin-right: 10px;
  }
  .section-heading {
    margin-left: 10px;
  }
}


// Media query for ipad pro
@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) { /* STYLES GO HERE */
}

